readjust auth system
