# authenticator/authenticator.go
@@ -3,12 +3,27 @@ package authenticator
 import (
 	"context"
 	"errors"
+	"io"
+	"net/http"
 
 	"github.com/coreos/go-oidc/v3/oidc"
 	"golang.org/x/oauth2"
 
 	"os"
 )
+
+type UserInfo struct {
+	Sub           string `json:"sub"`
+	GivenName     string `json:"given_name"`
+	FamilyName    string `json:"family_name"`
+	Nickname      string `json:"nickname"`
+	Name          string `json:"name"`
+	Picture       string `json:"picture"`
+	Locale        string `json:"locale"`
+	UpdatedAt     string `json:"updated_at"`
+	Email         string `json:"email"`
+	EmailVerified bool   `json:"email_verified"`
+}
 
 type Authenticator struct {
 	*oidc.Provider
@@ -28,7 +43,7 @@ func New() (*Authenticator, error) {
 	conf := oauth2.Config{
 		ClientID:     os.Getenv("AUTH0_CLIENT_ID"),
 		ClientSecret: os.Getenv("AUTH0_CLIENT_SECRET"),
-		RedirectURL:  os.Getenv("DOMAIN") + "/auth/callback",
+		RedirectURL:  os.Getenv("DOMAIN") + "/oauth/callback",
 		Endpoint:     provider.Endpoint(),
 		Scopes:       []string{oidc.ScopeOpenID, "profile", "email"},
 	}
@@ -50,4 +65,38 @@ func (a *Authenticator) VerifyIDToken(ctx context.Context, token *oauth2.Token) 
 	}
 
 	return a.Verifier(oidcConfig).Verify(ctx, rawIDToken)
+}
+
+func (a *Authenticator) VerifyRawIDToken(ctx context.Context, rawIDToken string) (*oidc.IDToken, error) {
+	oidcConfig := &oidc.Config{
+		ClientID: a.ClientID,
+	}
+
+	return a.Verifier(oidcConfig).Verify(ctx, rawIDToken)
+}
+
+func (a *Authenticator) GetUserinfo(access_token string) (string, error) {
+	if access_token == "" {
+		return "", errors.New("access_token is empty")
+	}
+
+	url := "https://" + os.Getenv("AUTH0_DOMAIN") + "/userinfo"
+	req, err := http.Get(url + "?access_token=" + access_token)
+
+	if err != nil {
+		return "", err
+	}
+
+	defer req.Body.Close()
+
+	body, err := io.ReadAll(req.Body)
+	if err != nil {
+		return "", err
+	}
+
+	if string(body) == "Unauthorized" {
+		return "", errors.New("Unauthorized")
+	}
+
+	return string(body), nil
 }
